@@ -12,39 +12,48 @@
  */
 package com.qubole.rubix.presto;
 
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.google.common.base.Supplier;
-import com.google.common.base.Suppliers;
 import com.google.common.base.Throwables;
+import com.google.common.cache.CacheBuilder;
+import com.google.common.cache.CacheLoader;
+import com.google.common.cache.LoadingCache;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
+import com.google.common.reflect.TypeToken;
+import com.google.gson.Gson;
 import com.qubole.rubix.spi.ClusterManager;
 import com.qubole.rubix.spi.ClusterType;
-import io.airlift.http.client.FullJsonResponseHandler;
-import io.airlift.http.client.HttpClient;
-import io.airlift.http.client.HttpStatus;
-import io.airlift.http.client.Request;
-import io.airlift.http.client.jetty.JettyHttpClient;
-import io.airlift.log.Logger;
+import org.apache.commons.httpclient.HttpStatus;
+import org.apache.commons.httpclient.params.HttpConnectionParams;
+import org.apache.commons.httpclient.params.HttpParams;
+import org.apache.commons.httpclient.params.HttpParamsFactory;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
+import org.apache.http.client.methods.CloseableHttpResponse;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.impl.client.CloseableHttpClient;
+import org.apache.http.impl.client.HttpClients;
+import org.apache.http.impl.conn.PoolingHttpClientConnectionManager;
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+
+import java.lang.reflect.Type;
 import java.net.InetAddress;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.UnknownHostException;
+import java.net.URL;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
-import java.util.concurrent.Future;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-
-import static io.airlift.http.client.FullJsonResponseHandler.createFullJsonResponseHandler;
-import static io.airlift.http.client.Request.Builder.prepareGet;
-import static io.airlift.json.JsonCodec.listJsonCodec;
 
 /**
  * Created by stagra on 14/1/16.
@@ -53,76 +62,164 @@ public class PrestoClusterManager extends ClusterManager
 {
     private boolean isMaster = true;
     private int serverPort = 8081;
-    private String serverAddress = "http://localhost";
+    private String serverAddress = "localhost";
 
-    private Supplier<List<String>> nodesSupplier;
+    //private Supplier<List<String>> nodesSupplier;
+    static LoadingCache<String, List<String>> nodesCache;
 
-    private static final Logger log = Logger.get(PrestoClusterManager.class);
+    private Log log = LogFactory.getLog(PrestoClusterManager.class);
 
     public static String serverPortConf = "caching.fs.presto-server-port";
+    public static String serverAddressConf = "master.hostname";
 
     // Safe to use single instance of HttpClient since Supplier.get() provides synchronization
-    private static HttpClient httpClient = new JettyHttpClient();
-
     @Override
     public void initialize(Configuration conf)
     {
         super.initialize(conf);
         this.serverPort = conf.getInt(serverPortConf, serverPort);
-
-        nodesSupplier = Suppliers.memoizeWithExpiration(new Supplier<List<String>>() {
+        this.serverAddress = conf.get(serverAddressConf, serverAddress);
+        /*nodesSupplier = Suppliers.memoizeWithExpiration(new Supplier<List<String>>() {
             @Override
             public List<String> get()
-            {
-                if (!isMaster) {
+            {*/
+        ExecutorService executor = Executors.newSingleThreadExecutor();
+        nodesCache = CacheBuilder.newBuilder()
+                .refreshAfterWrite(getNodeRefreshTime(), TimeUnit.SECONDS)
+                .build(CacheLoader.asyncReloading(new CacheLoader<String, List<String>>()
+                {
+                    @Override
+                    public List<String> load(String s)
+                            throws Exception
+                    {
+                        if (!isMaster) {
                     // First time all nodes start assuming themselves as master and down the line figure out their role
                     // Next time onwards, only master will be fetching the list of nodes
                     return ImmutableList.of();
                 }
 
                 try {
-                    List<Stats> allNodes;
-                    List<Stats> failedNodes = ImmutableList.of();
+                    PoolingHttpClientConnectionManager connManager = new PoolingHttpClientConnectionManager(1, TimeUnit.MINUTES);
+                    HttpGet allNodesRequest = new HttpGet(getNodeUri());
+                    HttpGet failedNodesRequest = new HttpGet(getFailedNodeUri());
+                    CloseableHttpClient httpClient = null;
+                    log.info("initalize 1");
+                        log.info("pool");
+                        connManager.setMaxTotal(200);
+                        connManager.setDefaultMaxPerRoute(100);
+                        HttpParamsFactory factory = new HttpParamsFactory() {
+                            @Override
+                            public HttpParams getDefaultParams()
+                            {
+                                return null;
+                            }
+                        };
+                        HttpConnectionParams.setHttpParamsFactory(factory);
+                        log.info("123");
+                        //httpClient = HttpClients.createSystem();
+                        httpClient = HttpClients.custom().setConnectionManager(connManager).build();
+                        //HttpClients.custom().setConnectionTimeToLive(1, TimeUnit.MINUTES).build();
+                    log.info("done and here");
+                    CloseableHttpResponse allNodesResponse = httpClient.execute(allNodesRequest);
+                    CloseableHttpResponse failedNodesResponse = httpClient.execute(failedNodesRequest);
 
-                    Request allNodesRequest = prepareGet()
-                            .setUri(getNodeUri())
-                            .build();
+                    StringBuffer allResponse = new StringBuffer();
+                    StringBuffer failedResponse = new StringBuffer();
 
-                    Request failedNodesRequest = prepareGet()
-                            .setUri(getFailedNodeUri())
-                            .build();
-
-                    Future allNodesFuture = httpClient.executeAsync(allNodesRequest, createFullJsonResponseHandler(listJsonCodec(Stats.class)));
-                    Future failedNodesFuture = httpClient.executeAsync(failedNodesRequest, createFullJsonResponseHandler(listJsonCodec(Stats.class)));
-
-                    FullJsonResponseHandler.JsonResponse allNodesResponse = (FullJsonResponseHandler.JsonResponse) allNodesFuture.get();
-                    if (allNodesResponse.getStatusCode() == HttpStatus.OK.code()) {
+                   if (allNodesResponse.getStatusLine().getStatusCode() == HttpStatus.SC_OK) {
                         isMaster = true;
-                        if (!allNodesResponse.hasValue()) {
-                            // Empty result set => server up and only master node running, return localhost has the only node
-                            // Do not need to consider failed nodes list as 1node cluster and server is up since it replied to allNodesRequest
-                            return ImmutableList.of(InetAddress.getLocalHost().getHostName());
+                        BufferedReader in = new BufferedReader(new InputStreamReader(allNodesResponse.getEntity().getContent()));
+                        String inputLine = "";
+                        while ((inputLine = in.readLine()) != null) {
+                            allResponse.append(inputLine);
                         }
-                        else {
-                            allNodes = (List<Stats>) allNodesResponse.getValue();
-                        }
+                        in.close();
+                       if (allNodesResponse.getEntity() != null) {
+                           try {
+                               allNodesResponse.getEntity().consumeContent();
+                           }
+                           catch (IOException e) {
+                               log.info("abc");
+                           }
+                       }
+                       allNodesResponse.close();
+
                     }
                     else {
-                        log.info(String.format("v1/node failed with code: %d setting this node as worker ", allNodesResponse.getStatusCode()));
+                        log.info(String.format("v1/node failed with code: %d setting this node as worker ", allNodesResponse.getStatusLine().getStatusCode()));
                         isMaster = false;
+                       allNodesResponse.close();
+                        return ImmutableList.of();
+                    }
+                    log.info("I can be here too");
+
+                    // check on failed nodes
+                    if (failedNodesResponse.getStatusLine().getStatusCode() == HttpStatus.SC_OK) {
+                        BufferedReader in = new BufferedReader(new InputStreamReader(failedNodesResponse.getEntity().getContent()));
+                        String inputLine;
+                        while ((inputLine = in.readLine()) != null) {
+                            failedResponse.append(inputLine);
+                        }
+                        in.close();
+                    }
+                    failedNodesResponse.close();
+                    /*URL allNodesRequest = getNodeUrl();
+                    URL failedNodesRequest = getFailedNodeUrl();
+                    HttpURLConnection httpcon = (HttpURLConnection) allNodesRequest.openConnection();
+                    HttpURLConnection httpconf = (HttpURLConnection) failedNodesRequest.openConnection();
+                    httpcon.setConnectTimeout(500);
+                    httpconf.setConnectTimeout(500);
+                    httpcon.setRequestMethod("GET");
+                    httpconf.setRequestMethod("GET");
+                    int allNodesResponseCode = httpcon.getResponseCode();
+                    int failedNodesResponseCode = httpconf.getResponseCode();
+
+                    StringBuffer allResponse = new StringBuffer();
+                    StringBuffer failedResponse = new StringBuffer();
+
+                    if (allNodesResponseCode == HttpURLConnection.HTTP_OK) {
+                        isMaster = true;
+                        BufferedReader in = new BufferedReader(new InputStreamReader(httpcon.getInputStream()));
+                        String inputLine = "";
+                        while ((inputLine = in.readLine()) != null) {
+                            allResponse.append(inputLine);
+                        }
+                        in.close();
+                        httpcon.disconnect();
+
+                    }
+                    else {
+                        log.info(String.format("v1/node failed with code: setting this node as worker "));
+                        isMaster = false;
+                        //allNodesResponse.close();
+                        httpcon.disconnect();
                         return ImmutableList.of();
                     }
 
                     // check on failed nodes
-                    FullJsonResponseHandler.JsonResponse failedNodesResponse = (FullJsonResponseHandler.JsonResponse) failedNodesFuture.get();
-                    if (failedNodesResponse.getStatusCode() == HttpStatus.OK.code()) {
-                        if (!failedNodesResponse.hasValue()) {
-                            failedNodes = ImmutableList.of();
-                            //return ImmutableList.of(InetAddress.getLocalHost().getHostName());
+                    if (failedNodesResponseCode == HttpURLConnection.HTTP_OK) {
+                        BufferedReader in = new BufferedReader(new InputStreamReader(httpconf.getInputStream()));
+                        String inputLine;
+                        while ((inputLine = in.readLine()) != null) {
+                            failedResponse.append(inputLine);
                         }
-                        else {
-                            failedNodes = (List<Stats>) failedNodesResponse.getValue();
-                        }
+                        in.close();
+                    }
+                    httpconf.disconnect();*/
+                    Gson gson = new Gson();
+                    Type type = new TypeToken<List<Stats>>() {}.getType();
+
+                    List<Stats> allNodes = gson.fromJson(allResponse.toString(), type);
+                    List<Stats> failedNodes = gson.fromJson(failedResponse.toString(), type);
+                    if (allNodes.isEmpty()) {
+                        // Empty result set => server up and only master node running, return localhost has the only node
+                        // Do not need to consider failed nodes list as 1node cluster and server is up since it replied to allNodesRequest
+                        return ImmutableList.of(InetAddress.getLocalHost().getHostName());
+                    }
+
+                    if (failedNodes.isEmpty()) {
+                        failedNodes = ImmutableList.of();
+                        //return ImmutableList.of(InetAddress.getLocalHost().getHostName());
                     }
 
                     // keep only the healthy nodes
@@ -132,30 +229,36 @@ public class PrestoClusterManager extends ClusterManager
 
                     for (Stats node : allNodes) {
                         hosts.add(node.getUri().getHost());
-                        log.debug(String.format("Node: %s", node.getUri()));
+                        log.info(String.format("Node: %s", node.getUri()));
                     }
-
                     if (hosts.isEmpty()) {
                         // case of master only cluster
                         hosts.add(InetAddress.getLocalHost().getHostName());
                     }
-
                     List<String> hostList = Lists.newArrayList(hosts.toArray(new String[0]));
                     Collections.sort(hostList);
                     return hostList;
                 }
-                catch (InterruptedException | ExecutionException | URISyntaxException | UnknownHostException e) {
+                catch (IOException e) {
                     throw Throwables.propagate(e);
                 }
-            }
-        }, 10, TimeUnit.SECONDS);
+                    }
+                }, executor));
+    //        }
+      //  }, 10, TimeUnit.SECONDS);
     }
 
     @Override
     public boolean isMaster()
     {
         // issue get on nodesSupplier to ensure that isMaster is set correctly
-        nodesSupplier.get();
+        //nodesSupplier.get();
+        try {
+            nodesCache.get("nodeList");
+        }
+        catch (ExecutionException e) {
+            e.printStackTrace();
+        }
         return isMaster;
     }
 
@@ -166,7 +269,14 @@ public class PrestoClusterManager extends ClusterManager
     @Override
     public List<String> getNodes()
     {
-        return nodesSupplier.get();
+        //return nodesSupplier.get();
+        try {
+            return nodesCache.get("nodeList");
+        }
+        catch (ExecutionException e) {
+            e.printStackTrace();
+        }
+        return null;
     }
 
     @Override
@@ -178,13 +288,25 @@ public class PrestoClusterManager extends ClusterManager
     private URI getNodeUri()
             throws URISyntaxException
     {
-        return new URI(serverAddress + ":" + serverPort + "/v1/node");
+        return new URI("http://" + serverAddress + ":" + serverPort + "/v1/node");
     }
 
     private URI getFailedNodeUri()
             throws URISyntaxException
     {
-        return new URI(serverAddress + ":" + serverPort + "/v1/node/failed");
+        return new URI("http://" + serverAddress + ":" + serverPort + "/v1/node/failed");
+    }
+
+    private URL getNodeUrl()
+            throws MalformedURLException
+    {
+        return new URL("http://" + serverAddress + ":" + serverPort + "/v1/node");
+    }
+
+    private URL getFailedNodeUrl()
+            throws MalformedURLException
+    {
+        return new URL("http://" + serverAddress + ":" + serverPort + "/v1/node/failed");
     }
 
     public static class Stats
@@ -192,15 +314,16 @@ public class PrestoClusterManager extends ClusterManager
         URI uri;
         String lastResponseTime;
 
-        @JsonCreator
-        public Stats(@JsonProperty("uri") URI uri,
-                @JsonProperty("lastResponseTime") String lastResponseTime)
+        public Stats()
+        {
+        }
+
+        public Stats(URI uri, String lastResponseTime)
         {
             this.uri = uri;
             this.lastResponseTime = lastResponseTime;
         }
 
-        @JsonProperty
         public URI getUri()
         {
             return uri;
@@ -211,7 +334,7 @@ public class PrestoClusterManager extends ClusterManager
             this.uri = uri;
         }
 
-        @JsonProperty String getLastResponseTime()
+        String getLastResponseTime()
         {
             return lastResponseTime;
         }
